Cheatsheet changed to fixed positioning as it was being cut off when it was positioned with respect to the triggering target within an offcanvas.

--- a/src/public/css/sui/sui.css
+++ b/src/public/css/sui/sui.css
@@ -584,6 +584,7 @@ a.sui-panel-btn.sui-mod-disabled-active {
 /* ---- Cheatsheet Start ---- */
 
 .sui-cheatsheet {
+  z-index: var(--popup-z-index);
   display: inline-flex;
   min-width: 200px;
   border-top: 2px solid var(--border);
